# MyBlog

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: CMakeLists.txt  Dockerfile
backend/config/: config.example.json
backend/migrations/: 001_init.sql  002_fts.sql  003_timestamp_normalize.sql  004_collections.sql  005_interactions.sql
backend/scripts/: migrate.sh  seed_admin.sh
backend/src/: main.cc
backend/src/app/: AppConfig.cc  AppConfig.h
backend/src/auth/: JwtService.cc  JwtService.h  PasswordService.cc  PasswordService.h  RefreshTokenService.cc  RefreshTokenService.h
backend/src/controllers/: AdminController.cc  AdminController.h  AuthController.cc  AuthController.h  CollectionController.cc  CollectionController.h  InteractionController.cc  InteractionController.h  PostController.cc  PostController.h  SearchController.cc  SearchController.h
backend/src/db/: Database.cc  Database.h  Migrations.cc
backend/src/logging/: RequestLogger.h
backend/src/middleware/: AdminMiddleware.cc  AdminMiddleware.h  AuthMiddleware.cc  AuthMiddleware.h
backend/src/models/: Collection.h  Comment.h  Interaction.h  Post.h  User.h
backend/src/repositories/: CollectionRepository.cc  CollectionRepository.h  InteractionRepository.cc  InteractionRepository.h  PostRepository.cc  PostRepository.h  SearchRepository.cc  SearchRepository.h  UserRepository.cc  UserRepository.h
backend/src/utils/: ApiError.cc  ApiError.h  JsonResponse.h  Validation.cc  Validation.h
backend/tests/: api_smoke.sh
frontend/: Dockerfile  index.html  nginx.conf  package.json  (+5 more)
(+53 files in other folders)
